7_1 Desplegar nuestra API desde la ventana de comandos

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,4 +3,4 @@ server.port=8090
 #Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
 spring.datasource.username=postgres
-spring.datasource.password=0326
+spring.datasource.password=123playstret
